[package]
name = "nebulaforge-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nebulaforge_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []


[dependencies]
anchor-lang = "=0.30.0"
anchor-spl = "=0.30.0"
mpl-token-metadata = { version = "=3.0.0", features = ["serde"] }